--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,6 +5,13 @@
 	
 }
 
+.story-script-regular, h1 {
+  font-family: "Story Script", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+
 body {
 	margin: 100px auto; 
 	width: 50%;
