--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,6 +12,14 @@
 font-size: 3em;
 }
 
+.backgroundImage {
+	background-image: url(../img/wrench.png);
+	width: 400px;
+	height: 400px;
+}
+
+	
+
 
 body {
 	margin: 100px auto; 
