--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -18,10 +18,15 @@ font-size: 3em;
 	height: 400px;
 }
 
+.backgroundImage:hover {
+	background-image: url(../img/clock.png);
+	cursor: crosshair;
+}
+
 	
 
 
 body {
 	margin: 100px auto; 
-	width: 50%;
+	width: 500px;
 }
